fix(header): revert logo to simple HV. and prevent menu links from wrapping using nowrap

--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ a:hover {
   color: var(--hv-grey);
   padding: 0.5rem; /* Optimisation touch-target mobile */
   transition: all 0.3s ease;
+  white-space: nowrap;
 }
 
 .nav-links a:hover,
